Bug 501537 - cannot change "Mouse Mark" desktop effect keyboard shortcuts
Summary: cannot change "Mouse Mark" desktop effect keyboard shortcuts
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwineffects (other bugs)
Version First Reported In: 6.3.3
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 517166 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-03-15 14:30 UTC by S. Christian Collins
Modified: 2026-03-14 16:51 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Christian Collins 2025-03-15 14:30:17 UTC
SUMMARY
Changes made to the "Clear Last Mouse Mark" and "Clear Mouse Marks" keyboard shortcuts in the Mouse Mark desktop effect are not remembered.

STEPS TO REPRODUCE
1. Go to System Settings → Window Management → Desktop Effects → Mouse Mark settings.
2. Change the keyboard shortcut for either "Clear Last Mouse Mark" or "Clear Mouse Marks".

OBSERVED RESULT
The "Apply" button remains grayed-out. If you click "OK" and then go back into the effect settings, the keyboard shortcuts have reverted to the default.

EXPECTED RESULT
The new keyboard shortcuts should be remembered.

WORKAROUND
If you tick or untick any of the modifier key boxes at the bottom of the window, the "Apply" button lights up and clicking it will also apply any changes to the aforementioned keyboard shortcuts.

SOFTWARE/OS VERSIONS
Linux: Fedora Linux Plasma Desktop Edition 41
KDE Plasma Version: 6.3.3
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.2
Comment 1 Nicolas Fella 2026-03-06 10:01:30 UTC
*** Bug 517166 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2026-03-06 10:22:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8942
Comment 3 Nicolas Fella 2026-03-13 12:46:57 UTC
Git commit 08d65fae1b8ef393b7bfb3b210a9d1e9ee7b550b by Nicolas Fella.
Committed on 13/03/2026 at 12:23.
Pushed by nicolasfella into branch 'master'.

plugins/mousemark: Enable Apply button when editing shortcut

M  +1    -0    src/plugins/mousemark/mousemark_config.cpp

https://invent.kde.org/plasma/kwin/-/commit/08d65fae1b8ef393b7bfb3b210a9d1e9ee7b550b
Comment 4 Nicolas Fella 2026-03-14 16:51:12 UTC
Git commit 95209d9fd08f8a6827a4f2bfb6ee2d4c29d17aff by Nicolas Fella.
Committed on 14/03/2026 at 16:17.
Pushed by nicolasfella into branch 'Plasma/6.6'.

plugins/mousemark: Enable Apply button when editing shortcut


(cherry picked from commit 08d65fae1b8ef393b7bfb3b210a9d1e9ee7b550b)

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>

M  +1    -0    src/plugins/mousemark/mousemark_config.cpp

https://invent.kde.org/plasma/kwin/-/commit/95209d9fd08f8a6827a4f2bfb6ee2d4c29d17aff