plugins/mousemark: Enable Apply button when editing shortcut

BUG: 501537